<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_change_pass"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/card_report_prob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/card_title_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/change_pass"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/card_brief_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/quicksand"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/card_brief_4"
            android:textColor="@color/colorSecondary"
            android:textSize="15sp" />

        <Button
            android:id="@+id/profile_btn_change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="5dp"
            android:height="25dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/change_pass"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_report_prob"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_change_pass">

        <TextView
            android:id="@+id/card_title_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/report_prob"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/card_brief_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/quicksand"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/card_brief_5"
            android:textColor="@color/colorSecondary"
            android:textSize="15sp" />

        <Button
            android:id="@+id/profile_btn_report_prob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="5dp"
            android:height="25dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/report_prob"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>