<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_background"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:background="@drawable/ic_profile_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.261"
                android:src="@drawable/ic_default_avatar" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_username"
                app:layout_constraintVertical_bias="0.03" />

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_avatar"
                app:layout_constraintVertical_bias="0.191" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_sign_out"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintBottom_toTopOf="@+id/card_help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_background"
                app:layout_constraintVertical_bias="0.45">

                <TextView
                    android:id="@+id/card_title_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/sign_out"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/card_brief_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/quicksand"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/card_brief_1"
                    android:textColor="@color/colorSecondary"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/profile_btn_sign_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="5dp"
                    android:height="25dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/sign_out"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_help"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintBottom_toTopOf="@+id/card_delete_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_sign_out">

                <TextView
                    android:id="@+id/card_title_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/help"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/card_brief_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/quicksand"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/card_brief_2"
                    android:textColor="@color/colorSecondary"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/profile_btn_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="5dp"
                    android:height="25dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/help"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_delete_account"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_help">

                <TextView
                    android:id="@+id/card_title_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/del_acc"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/card_brief_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/quicksand"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/card_brief_3"
                    android:textColor="@color/colorSecondary"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/profile_btn_del_acc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="5dp"
                    android:height="25dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/del_acc"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_from_alyx"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_delete_account" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>